--- a/templates/buscar_producto.html
+++ b/templates/buscar_producto.html
@@ -1,10 +1,10 @@
-{% extends 'layout.html' %}
+{% extends 'inventario_layout.html' %}
 
 {% block title %}
-    StockTaking | Buscar Producto
+    Buscar Producto | StockTaking App
 {% endblock %}
 
-{% block content %}
+{% block main %}
 <div class="busqueda-container">
   <div class="filtros-horizontales">
     <button type="button" class="filtro-btn active" data-filtro="nombre">Nombre</button>
