--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,10 @@
-{% extends 'layout.html' %}
-{% block content %}
+{% extends 'home_layout.html' %}
+
+{% block title %}
+    Panel de Usuario | StockTaking App
+{% endblock %}
+
+{% block main %}
 <style>
 .dashboard-container {
     max-width: 420px;
