--- a/templates/nueva_venta.html
+++ b/templates/nueva_venta.html
@@ -1,5 +1,12 @@
-{% extends 'layout.html' %}
-{% block content %}
+{% extends 'ventas_layout.html' %}
+
+
+{% block title %}
+    Nueva Venta | StockTaking App
+{% endblock %}
+
+
+{% block main %}
 <style>
 .nueva-venta-container {
     max-width: 480px;
