--- a/templates/nuevo_producto.html
+++ b/templates/nuevo_producto.html
@@ -1,12 +1,12 @@
-{% extends 'layout.html' %}
+{% extends 'inventario_layout.html' %}
 
 
 {% block title %}
-    StockTaking | Producto Nuevo
+    Producto Nuevo | StockTaking App
 {% endblock %}
 
 
-{% block content %}
+{% block main %}
     <form method="post" class="form-producto" id="form-producto" enctype="multipart/form-data">
         <h1>Agregar Nuevo Producto</h1>
         <div class="form-group">
