--- a/templates/tasa_dolar_ventas.html
+++ b/templates/tasa_dolar_ventas.html
@@ -1,12 +1,12 @@
-{% extends 'layout.html' %}
+{% extends 'ventas_layout.html' %}
 
 
 {% block title %}
-    StockTaking | Tasa de Cambio
+    Tasa de Cambio | StockTaking App
 {% endblock %}
 
 
-{% block content %}
+{% block main %}
 <div class="tasa-dolar-container">
   <h1>Tasa de Cambio</h1>
   <div class="exchange-rate-card">
