--- a/templates/verify_email.html
+++ b/templates/verify_email.html
@@ -1,5 +1,12 @@
-{% extends 'layout.html' %}
-{% block content %}
+{% extends 'auth_layout.html' %}
+
+
+{% block title %}
+    Verificación de correo | StockTaking App
+{% endblock %}
+
+
+{% block auth %}
 <style>
 .verify-form-container {
     max-width: 350px;
