Rediseño de seccion `home`. Cambios en diseño general. Mejoras en distribucion del codigo HTML & CSS. Correccion en rutas del servidor.

--- a/templates/cambiar_contrasena.html
+++ b/templates/cambiar_contrasena.html
@@ -1,6 +1,10 @@
-{% extends 'layout.html' %}
-{% block title %}Cambiar contraseña{% endblock %}
-{% block content %}
+{% extends 'home_layout.html' %}
+
+{% block title %}
+    Cambiar contraseña | StockTaking App
+{% endblock %}
+
+{% block main %}
 <h2>Cambiar contraseña</h2>
 <form method="post">
     <label>Contraseña actual:<br><input type="password" name="actual" required></label><br><br>
