--- a/templates/editar_usuario.html
+++ b/templates/editar_usuario.html
@@ -1,5 +1,10 @@
-{% extends 'layout.html' %}
-{% block content %}
+{% extends 'home_layout.html' %}
+
+{% block title %}
+    Editar información | StockTaking App
+{% endblock %}
+
+{% block main %}
 <style>
 .edit-user-container {
     max-width: 420px;
